--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -29,19 +29,19 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Текст отзыва" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dG8-1s-Uxv">
-                                <rect key="frame" x="15.999999999999993" y="256.33333333333331" width="99.333333333333314" height="20"/>
+                                <rect key="frame" x="15.999999999999993" y="272.33333333333331" width="99.333333333333314" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Оценка" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KxK-4Z-VEc">
-                                <rect key="frame" x="16" y="209" width="176" height="20"/>
+                                <rect key="frame" x="16" y="217" width="176" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ShL-Z3-9Ko" customClass="CosmosView" customModule="Cosmos">
-                                <rect key="frame" x="224" y="206.33333333333334" width="150" height="25"/>
+                                <rect key="frame" x="224" y="214.33333333333334" width="150" height="25"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="AqW-Dd-AMV"/>
@@ -63,24 +63,24 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XH4-zp-Pgu">
-                                <rect key="frame" x="0.0" y="189.33333333333334" width="390" height="1"/>
+                                <rect key="frame" x="0.0" y="197.33333333333334" width="390" height="1"/>
                                 <color key="backgroundColor" red="0.93868440389999996" green="0.93872648479999998" blue="0.94224876170000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="X2h-Hq-szb"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1GL-6c-Wa3">
-                                <rect key="frame" x="0.0" y="247.33333333333334" width="390" height="1"/>
+                                <rect key="frame" x="0.0" y="255.33333333333334" width="390" height="1.0000000000000284"/>
                                 <color key="backgroundColor" red="0.93868440389999996" green="0.93872648479999998" blue="0.94224876170000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="AcC-4f-9YT"/>
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hPi-s6-ZgP">
-                                <rect key="frame" x="16" y="284.33333333333331" width="358" height="200"/>
+                                <rect key="frame" x="16" y="300.33333333333331" width="358" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="dCn-ci-0aw"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="dCn-ci-0aw"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -88,7 +88,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XKV-Py-OHO">
-                                <rect key="frame" x="16" y="500.33333333333326" width="163" height="30"/>
+                                <rect key="frame" x="16" y="516.33333333333337" width="163" height="30"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UDK-9s-j8r">
                                         <rect key="frame" x="8" y="6.6666666666666643" width="23.666666666666671" height="17.333333333333336"/>
@@ -113,7 +113,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqz-aI-sXG">
-                                <rect key="frame" x="262" y="493" width="112" height="40"/>
+                                <rect key="frame" x="262" y="516.33333333333337" width="112" height="40"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="112" id="72q-Fk-QCE"/>
@@ -136,7 +136,7 @@
                             <constraint firstItem="KxK-4Z-VEc" firstAttribute="leading" secondItem="Mzm-TQ-wqI" secondAttribute="leading" constant="16" id="9wL-1h-520"/>
                             <constraint firstItem="hPi-s6-ZgP" firstAttribute="top" secondItem="dG8-1s-Uxv" secondAttribute="bottom" constant="8" id="B9U-QW-QWT"/>
                             <constraint firstItem="eTJ-xL-3QQ" firstAttribute="top" secondItem="Mzm-TQ-wqI" secondAttribute="top" constant="32" id="Bsg-kY-UcX"/>
-                            <constraint firstItem="uqz-aI-sXG" firstAttribute="top" secondItem="hPi-s6-ZgP" secondAttribute="bottom" constant="8.6699999999999999" id="CV1-8O-49R"/>
+                            <constraint firstItem="uqz-aI-sXG" firstAttribute="top" secondItem="hPi-s6-ZgP" secondAttribute="bottom" constant="16" id="CV1-8O-49R"/>
                             <constraint firstItem="Mzm-TQ-wqI" firstAttribute="trailing" secondItem="9Nh-dc-pKC" secondAttribute="trailing" constant="16" id="GkG-tk-3Yu"/>
                             <constraint firstItem="eTJ-xL-3QQ" firstAttribute="leading" secondItem="Mzm-TQ-wqI" secondAttribute="leading" constant="16" id="JSf-Ny-WEe"/>
                             <constraint firstItem="hPi-s6-ZgP" firstAttribute="leading" secondItem="Mzm-TQ-wqI" secondAttribute="leading" constant="16" id="QDi-Mb-lq6"/>
@@ -145,9 +145,9 @@
                             <constraint firstItem="XKV-Py-OHO" firstAttribute="leading" secondItem="Mzm-TQ-wqI" secondAttribute="leading" constant="16" id="V1M-4i-S8U"/>
                             <constraint firstItem="ShL-Z3-9Ko" firstAttribute="top" secondItem="XH4-zp-Pgu" secondAttribute="bottom" constant="16" id="Vxf-YX-tKP"/>
                             <constraint firstItem="dG8-1s-Uxv" firstAttribute="leading" secondItem="Mzm-TQ-wqI" secondAttribute="leading" constant="16" id="Yw9-nk-UpB"/>
-                            <constraint firstItem="XH4-zp-Pgu" firstAttribute="top" secondItem="9Nh-dc-pKC" secondAttribute="bottom" constant="8" id="arV-9t-KAX"/>
+                            <constraint firstItem="XH4-zp-Pgu" firstAttribute="top" secondItem="9Nh-dc-pKC" secondAttribute="bottom" constant="16" id="arV-9t-KAX"/>
                             <constraint firstItem="Mzm-TQ-wqI" firstAttribute="trailing" secondItem="uqz-aI-sXG" secondAttribute="trailing" constant="16" id="br4-mg-fUX"/>
-                            <constraint firstItem="dG8-1s-Uxv" firstAttribute="top" secondItem="1GL-6c-Wa3" secondAttribute="bottom" constant="8" id="elj-jm-xaH"/>
+                            <constraint firstItem="dG8-1s-Uxv" firstAttribute="top" secondItem="1GL-6c-Wa3" secondAttribute="bottom" constant="16" id="elj-jm-xaH"/>
                             <constraint firstItem="1GL-6c-Wa3" firstAttribute="top" secondItem="ShL-Z3-9Ko" secondAttribute="bottom" constant="16" id="h7u-cb-ms6"/>
                             <constraint firstItem="ShL-Z3-9Ko" firstAttribute="leading" secondItem="KxK-4Z-VEc" secondAttribute="trailing" constant="32" id="kXa-gN-MUE"/>
                             <constraint firstItem="ShL-Z3-9Ko" firstAttribute="centerY" secondItem="KxK-4Z-VEc" secondAttribute="centerY" id="kji-G0-aHu"/>
